--- a/docs/memoria-TFG/anexos/01_Manual_Usuario.tex
+++ b/docs/memoria-TFG/anexos/01_Manual_Usuario.tex
@@ -386,7 +386,7 @@ Para generar los trayectos de forma aleatoria tenemos que seleccionar la opción
 	\label{img:paso4-3}
 \end{figure}
 
-\section{Edición de mapas y escenas}
+\section{Edición de mapas y escenas}\label{sec:editarMapasEscenas}
 
 Para modificar un mapa o escena primero tenemos que realizar una busque de mapas en Maps $\rightarrow$ maps search y en la lista de resultados pulsamos sobre el icono de editar imagen. Solo podemos editar un mapa si la hayamos creado nosotros. De lo contrario el icono de editar imagen no aparecerá. Una vez que hayamos pulsado el icono de editar imagen entonces veremos la siguiente pantalla:
 
