--- a/docs/memoria-TFG/prefacios/prefacio.tex
+++ b/docs/memoria-TFG/prefacios/prefacio.tex
@@ -32,7 +32,7 @@ Para la gestión del proyecto se ha elegido el modelo en espiral como modelo de 
        \vspace{1cm}
 
 
-Me gustaría agradecer este Trabajo Fin de Grado a todas las personas que lo han echo posible con su apoyo y dedicación.
+Me gustaría agradecer este Trabajo Fin de Grado a las personas que lo han echo posible con su apoyo y dedicación.
 
 \vspace{1cm}
 En su primer lugar a mi director Sergio Ilarri por la oportunidad que me ha dado para realizar este proyecto, su paciencia y ayuda, sin la cual este proyecto no hubiera sido posible. A mis compañeros y amigos de clase, con los que he compartido estos años de carrera, por hacer que los momentos de estudio y prácticas fuesen agradables y amenos. A mi familia y amigos más cercanos, por su paciencia y por motivarme para seguir adelante en los momentos más complicados.
