--- a/docs/memoria-TFG/anexos/01_Manual_Usuario.tex
+++ b/docs/memoria-TFG/anexos/01_Manual_Usuario.tex
@@ -400,7 +400,7 @@ En esta pantalla disponemos de distintos tipos de opciones entre los cuales modi
 
 \section{Simulación}
 
-Para ejecutar una simulación lo primero que tenemos que hacer es realizar la búsqueda de un mapa explicado en el capítulo \ref{sec:BuscarMapas}. Una vez que hayamos realizado la búsqueda pulsamos el botón "Play" y a continuación se nos muestra una pantalla en la cual tenemos que elegir la escena a la cual queremos conectarnos.
+Para ejecutar una simulación lo primero que tenemos que hacer es realizar la búsqueda de un mapa explicado en el capítulo \ref{sec:BuscarMapas}. Una vez que hayamos realizado la búsqueda pulsamos el botón ``Play`` y a continuación se nos muestra una pantalla en la cual tenemos que elegir la escena a la cual queremos conectarnos.
 
 \begin{figure}[H]
 	\centering\includegraphics[scale=0.35]{imagenes/capitulo11/capitulo11.jpg}
