--- a/docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.tex
+++ b/docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.tex
@@ -1,10 +1,9 @@
 \documentclass[a4paper,11pt]{book}
-%\documentclass[a4paper,twoside,11pt,titlepage]{book}
 \usepackage{array}
 \usepackage{appendix}
 \usepackage{cite}
 \usepackage{dirtree}
-\usepackage{enumerate} % enumerados
+\usepackage{enumerate}
 \usepackage{multirow}
 \usepackage{listings}
 \usepackage{longtable}
