--- a/docs/memoria-TFG/anexos/02_Analisis.tex
+++ b/docs/memoria-TFG/anexos/02_Analisis.tex
@@ -68,7 +68,7 @@
 	RF-17 & La aplicación permitirá al usuario configurar un nuevo tipo de recomendador\\ \hline
 	RF-18 & La aplicación permitirá al usuario editar la configuración de recomendador existente\\ \hline
 	RF-18 & La aplicación permitirá al usuario asociar un recomendador existente a una escena\\ \hline
-	RF-19 & La aplicación permitirá al usuario definir los limites de una escena\\ \hline
+	RF-19 & La aplicación permitirá al usuario definir los límites de una escena\\ \hline
 	RF-20 & La aplicación permitirá al usuario asociar un objeto estático a una escena\\ \hline
 	RF-21 & La aplicación permitirá al usuario cargar todos los objetos estáticos desde un fichero JSON\\ \hline
 	RF-22 & La aplicación permitirá asociar un objeto dinámico y su definir su ruta en una escena\\ \hline
@@ -98,7 +98,7 @@ Así que para poder garantizar la calidad y la satisfacción de los usuarios ten
 	\item {\bfseries Efectividad}: asegurar que la aplicación desempeñe correctamente todos los objetivos de la aplicación.  	
 	\item {\bfseries Eficiencia}: asegurar que cada objetivo de aplicación sea realizado en el menor tiempo posible desempeñando correctamente su tareas .
 	\item {\bfseries Utilidad}:para que el sistema pueda hacer todas las tareas que el usuario deba hacer, la aplicación tendrá conexión a Internet ya que establecerá conexión con un servidor en el que se encuentra toda la información de los productos. Siempre y cuando la conexión sea satisfactoria, el usuario podrá realizar las tareas descritas en el apartado de análisis de requisitos funcionales. 
-	\item {\bfseries Seguridad}: asegurar que aplicación evite situaciones de pérdida de información, evitar que se cuelgue y garantizar la confidencialidad de la información ya que la aplicación tiene acceso a Internet.
+	\item {\bfseries Seguridad}: asegurar que la aplicación evite situaciones de pérdida de información, evitar que se cuelgue y garantizar la confidencialidad de la información ya que la aplicación tiene acceso a Internet.
 \end{itemize}	 
 
 \begin{longtable}[H]{|p{3cm}|p{3cm}|p{3cm}|p{3cm}|}
