--- a/docs/memoria-TFG/anexos/03_Implementacion.tex
+++ b/docs/memoria-TFG/anexos/03_Implementacion.tex
@@ -111,7 +111,7 @@ Los controladores de Angular.js contienen la lógica de las vistas y establecen 
 
 \begin{figure}[H]
 	\centering\includegraphics[scale=0.5]{imagenes/concepts-controller.png}
-	\caption{Ejmplo de un controlador}
+	\caption{Ejemplo de un controlador}
 	\label{controllerExample}
 \end{figure}
 
@@ -157,7 +157,7 @@ El fichero package.json forma parte del gestor de paquetes npm y contiene todos 
 
 Por ultimo nos encontramos con los directorios routes y models. En el directorio routes podemos encontrar todo lo relacionado con el enrutamiento interno de la REST API y en models encontramos el modelo de datos usado en la base de datos.
 
-\subsection{¿Como crear un instalador de la aplicación?}
+\subsection{¿Cómo crear un instalador de la aplicación?}
 
 Para crear un instalador de la aplicación se ha utilizado el programa Inno Setup v5.5.9. Dispone de un asistente de configuración que podemos ver en las secciones siguientes. Una vez que hayamos finalizado el asistente se crea un script que tenemos que compilar. Durante la complicación se comprimen todos los ficheros y directorios de nuestro proyecto y nos pide cual es el programa que tenemos que ejecutar cada vez que se inicie la aplicación.
 
